# gr

./: .gitignore
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json
cpp/blackness/: CMakeLists.txt
cpp/gpu-offscreen/: CMakeLists.txt
cpp/gpu-offscreen/src/: CMakeLists.txt  Camera.h  Filesystem.h  Input.h  Pipeline.h  Shader.h  VulkanBase.cpp  VulkanBase.h  VulkanInitializer.h  VulkanTools-bak.h  gpu-offscreen.cpp  pch.h
cpp/gpu-offscreen/src/base/: CMakeLists.txt  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanUIOverlay.h  VulkanglTFModel.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
cpp/gpu-offscreen/src/shaders/: compile.bat  shader.vert  trace.comp
cpp/offline/: CMakeLists.txt
cpp/offline/src/: CMakeLists.txt  Camera.h  library.h  movie.h  offline.cpp  pch.h  playground.cpp  writer.cpp
cpp/offline/test/: CMakeLists.txt  library_test.cpp  offline_bench.cpp
cpp/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/rkf45/: CMakeLists.txt  qags.cpp  rkf45.cpp  rkf45.h  rkf45_test.cpp
cpp/wxwidgets/: main.cpp
mathematica/: schwar.nb  trace normalize.nb  trace-refine.nb  trace.nb
note/: GR.lyx  GR.tex
python/: GR-prototype.ipynb  debug.py  trace.py
